# tldr_highlight_api

./: .env.example  .env.test  .gitignore  API_REVIEW_REPORT.md  CLAUDE.md  Dockerfile  GEMINI_MIGRATION_GUIDE.md  LINEAR_PROJECT.md  README.md  docker-compose.watch.yml  docker-compose.yml  pyproject.toml  start-infrastructure.sh  test_coverage_summary.md  tldr_highlight_api_postman_collection.json
.github/: BADGES.md
.github/workflows/: quality.yml  test.yml
alembic/versions/: 003_add_flexible_highlight_system.py
docs/: #aws-cognito-multi-tenant-research.md#  API_DESIGN_DOCUMENT.md  ENTERPRISE_INTEGRATION_GUIDE.md  FEATURES.md  INFRASTRUCTURE.md  LOGFIRE_INTEGRATION_COMPLETE.md  LOGFIRE_OBSERVABILITY.md  QUICK_REFERENCE.md  README.md  TECHNICAL_IMPLEMENTATION.md  TESTING_AUDIT.md  TESTING_STRATEGY.md  aws-cognito-multi-tenant-research.md  chat_optional_detection.md  configuration.md  development-setup.md  multi-tenant-architecture-plan.md  quick-start.md  rate-limiting.md  sentiment_analysis.md  unified_buffering_architecture.md  youtube_hls_implementation.md
docs/ai/: customizable-dimensions-framework.md  flexible-highlight-detection.md  gemini-highlight-processing-flow.md  highlight-detection.md
docs/api/: authentication.md  highlights.md  organizations.md  overview.md  streams.md  users.md  webhooks.md
docs/architecture/: application-flows.md  domain-model.md  overview.md
docs/content_delivery/: content_security.md  url_signing_guide.md
docs/deployment/: overview.md
docs/troubleshooting/: common-issues.md  faq.md
examples/: logfire_service_instrumentation.py  logfire_usage_example.py  minimal_timeline_demo.py  simple_timeline_demo.py  timeline_sync_example.py  twitch_eventsub_example.py  unified_buffering_example.py
scripts/: test_coverage_report.py
src/: __init__.py
src/api/: __init__.py  auth_utils.py  dependencies.py  exceptions.py  main.py
src/api/dependencies/: __init__.py  auth.py  repositories.py  security.py  security_services.py  services.py  use_cases.py
src/api/mappers/: __init__.py  auth_mapper.py  base.py  batch_mapper.py  functional.py  highlight_mapper.py  organization_mapper.py  stream_mapper.py  webhook_mapper.py
src/api/middleware/: __init__.py  error_handling.py  logging.py  rate_limiting.py  security.py
src/api/models/: api_key.py  auth.py  organization.py  user.py
src/api/routers/: __init__.py  auth.py  batches.py  content.py  health.py  highlights.py  organizations.py  streams.py  users.py  webhook_receiver.py  webhooks.py
src/api/routes/: auth.py  dimensions.py  health.py  highlights.py  organizations.py  streams.py  users.py  webhooks.py
src/api/schemas/: __init__.py  api_key.py  auth.py  batches.py  common.py  highlights.py  organization.py  organizations.py  streams.py  user.py  users.py  webhook_models.py  webhooks.py
src/application/: __init__.py
src/application/services/: __init__.py  dimension_set_service.py  highlight_detection_workflow.py  highlight_detector.py  highlight_service.py  organization_service.py  organization_workflow.py  stream_analysis_service.py  stream_processing_workflow.py  usage_tracking_workflow.py  user_service.py
src/application/use_cases/: __init__.py  api_key_management.py  api_key_validation.py  authentication.py  base.py  batch_processing.py  highlight_management.py  organization_management.py  stream_processing.py  user_login.py  user_management.py  user_registration.py  webhook_configuration.py  webhook_processing.py
src/application/workflows/: __init__.py  authenticator.py  dimension_manager.py  organization_manager.py  stream_processor.py  usage_tracker.py  webhook_notifier.py
src/core/: __init__.py  auth.py  cache.py  config.py  database.py  queue.py
src/domain/: __init__.py  calibration.py  constraint_evaluation.py  enums.py  events.py  exceptions.py  protocols.py  scoring.py  validation.py
src/domain/entities/: __init__.py  api_key.py  base.py  batch.py  composite_dimension.py  dimension_set.py  dimension_set_aggregate.py  highlight.py  highlight_agent_config.py  highlight_type_registry.py  organization.py  organization_key.py  stream.py  stream_processing_config.py  usage_record.py  user.py  video_segment.py  webhook.py  webhook_event.py
src/domain/interfaces/: __init__.py  ai_video_analyzer.py
src/domain/models/: __init__.py  api_key.py  highlight.py  organization.py  stream.py  user.py  wake_word.py
src/domain/policies/: dimension_set_policy.py
src/domain/repositories/: __init__.py  (+15 more)
src/infrastructure/: __init__.py  config.py
src/services/: __init__.py  auth.py  auth_service.py  rate_limit.py  storage.py
src/utils/: __init__.py  auth.py  circuit_breaker.py  frame_synchronizer.py  media_utils.py  metrics.py  ml_utils.py  nlp_utils.py  rtmp_protocol.py  segment_processor.py  stream_validation.py  video_buffer.py
tests/: __init__.py  conftest.py  factories.py  test_auth_dependencies.py  test_auth_integration.py  test_auth_service.py  test_auth_utils.py  test_models.py  test_rate_limit_service.py
tests/api/: test_exceptions.py
tests/core/: test_cache.py
tests/integration/: test_auth_api.py  test_basic_flow.py  test_celery_workflow.py  test_detection_pipeline.py  test_end_to_end_flow.py  test_error_handling_flow.py  test_highlights_api.py  test_logfire_integration.py  test_multimodal_pipeline.py  test_organizations_api.py  test_platform_connections.py  test_stream_flow_simple.py  test_timeline_sync_integration.py  test_users_api.py
tests/services/: test_storage_service.py
tests/unit/: test_async_processing.py  test_chat_detector_v2.py  test_chat_optional_detection.py  test_content_processing.py  test_frame_synchronizer.py  test_gemini_integration.py  test_highlight_detection.py  test_hls_parser.py  test_jwt_service.py  test_media_utils.py  test_nlp_utils.py  test_password_service.py  test_repositories.py  test_rtmp_components.py  test_sentiment_analyzer.py  test_stream_adapters.py  test_stream_validation.py  test_timeline_sync.py  test_video_buffer.py  test_youtube_chat_adapter.py
tests/utils/: test_metrics.py  test_scoring_utils.py
(+268 files in other folders)
