[project]
name = "tldr-highlight-api"
version = "0.1.0"
description = "Enterprise B2B API for AI-powered highlight extraction from livestreams and video content"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.4",
]

[tool.uv.workspace]
members = [
    "packages/shared",
    "packages/api", 
    "packages/worker"
]

[tool.uv.sources]
shared = { workspace = true }

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-watch>=4.2.0",
    # Code quality and formatting
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
    "radon>=6.0.0",
    # Type stubs
    "types-redis>=4.6.0",
    "types-passlib>=1.7.7",
    "types-aiofiles>=24.0.0",
    "scipy-stubs>=1.16.0",
    "types-psutil>=6.1.0",
    # Test utilities
    "factory-boy>=3.3.0",
    "faker>=33.0.0",
    "moto[s3]>=5.0.0",
    "testcontainers[postgres]>=4.0.0",
    "greenlet>=3.0.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--asyncio-mode=auto",
]
markers = [
    "integration: marks tests as integration tests (require external services)",
    "slow: marks tests as slow running",
]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = false

# Ignore untyped imports for packages without type stubs
[[tool.mypy.overrides]]
module = [
    "ffmpeg.*",
    "google.genai.*",
    "moto.*",
    "factory.*",
    "faker.*",
    "celery.*"
]
ignore_missing_imports = true
